Fixed issues with tabs in titlebar, tab spacing, and window borders. Made selected messages more visible, and added support for the chat window and app menu.

--- a/ClassicTB2/chrome/messenger/mailWindow1.css
+++ b/ClassicTB2/chrome/messenger/mailWindow1.css
@@ -80,18 +80,30 @@
 
 /* ::::: thread decoration ::::: */
 
+#threadTree treechildren::-moz-tree-row(odd) {
+  background-image: url("chrome://messenger/skin/icons/row.png");
+  background-position: bottom;
+  background-repeat: repeat-x;
+}
+
+#threadTree treechildren::-moz-tree-row(selected) {
+  background-image: url("chrome://messenger/skin/icons/row-selected.png");;
+}
+
 treechildren::-moz-tree-row(dummy)  {
   background-color:  #F0F0F0;
   margin-bottom: 1px;
   -moz-padding-start: 2px;
 }
 
-treechildren::-moz-tree-row(dummy, selected) {
+treechildren::-moz-tree-row(selected) {
   background-color: -moz-Dialog;
+  /*background-image: none !important;*/
 }
 
-treechildren::-moz-tree-row(dummy, selected, focus)  {
-  background-color: Highlight;
+treechildren::-moz-tree-row(selected, focus)  {
+  background-color: Highlight !important;
+  background-image: none !important;
 }
 
 treechildren::-moz-tree-cell-text(dummy) {
@@ -262,6 +274,7 @@ treechildren::-moz-tree-image(subjectCol, new) {
 }
 
 
+
 /* IMPORTANT: make sure the imap-deleted column always comes after the replied/forwarded style rules.
    This ensures that we show that the message is marked as deleted over status information. */
 
@@ -401,12 +414,6 @@ treechildren::-moz-tree-cell-text(subjectCol) {
   list-style-image: url("chrome://global/skin/icons/loading_16.gif");
 }
 
-#threadTree treechildren::-moz-tree-row(odd) {
-  background-image: url("chrome://messenger/skin/icons/row.png");
-  background-position: bottom;
-  background-repeat: repeat-x;
-}
-
 .tabmail-tab[type="message"] {
   list-style-image: url("chrome://messenger/skin/icons/server.png");
   -moz-image-region: rect(0 16px 16px 0);
@@ -417,3 +424,213 @@ treechildren::-moz-tree-cell-text(subjectCol) {
 tabpanels#tabpanelcontainer {
   -moz-appearance: none;
 }
+
+/* ..... Draw in titlebar ..... */
+
+@media (-moz-windows-default-theme) {
+  #messengerWindow[tabsintitlebar] {
+    background-color: ActiveCaption;
+  }
+
+  #messengerWindow[tabsintitlebar]:-moz-window-inactive {
+    background-color: InactiveCaption;
+  }
+}
+
+#titlebar {
+  -moz-binding: url("chrome://global/content/bindings/general.xml#windowdragbox");
+}
+
+#messengerWindow:not([tabsintitlebar]) #titlebar {
+  visibility: collapse;
+}
+
+#titlebar:-moz-lwtheme {
+  visibility: hidden;
+}
+
+#titlebar-content:-moz-lwtheme {
+  -moz-binding: url("chrome://global/content/bindings/general.xml#windowdragbox");
+  visibility: visible;
+}
+
+#titlebar-spacer {
+  pointer-events: none;
+}
+
+#tabs-toolbar {
+  -moz-binding: url("chrome://global/content/bindings/toolbar.xml#toolbar-drag");
+}
+
+#titlebar-buttonbox {
+  -moz-appearance: -moz-window-button-box;
+  position: relative;
+}
+
+#titlebar-min {
+  -moz-appearance: -moz-window-button-minimize;
+}
+
+@media not all and (-moz-windows-classic) {
+  #titlebar-min {
+    -moz-margin-end: 2px;
+  }
+}
+
+#titlebar-max {
+  -moz-appearance: -moz-window-button-maximize;
+}
+
+#messengerWindow[sizemode="maximized"] #titlebar-max {
+  -moz-appearance: -moz-window-button-restore;
+}
+
+#titlebar-close {
+  -moz-appearance: -moz-window-button-close;
+}
+
+#messengerWindow[tabsintitlebar] .titlebar-placeholder[type="caption-buttons"] {
+  margin-left: 10px; /* additional space for Aero Snap */
+}
+
+#messengerWindow:not([tabsintitlebar]) .titlebar-placeholder {
+  visibility: collapse; 
+}
+
+/* Window titlebar drawn by TB. So needs border like system windows */
+#messengerWindow[sizemode="normal"] > #titlebar > #titlebar-content {
+  border-top: 3px solid;
+  -moz-border-top-colors: ThreeDLightShadow ThreeDHighlight ActiveBorder;
+}
+
+#messengerWindow[sizemode="normal"] #titlebar-buttonbox {
+  margin-top: -3px;
+}
+
+#messengerWindow[sizemode="normal"] > #titlebar >
+#titlebar-content:-moz-window-inactive {
+  -moz-border-top-colors: ThreeDLightShadow ThreeDHighlight InactiveBorder;
+}
+
+@media (-moz-windows-default-theme) {
+  #messengerWindow[sizemode="normal"] > #titlebar > #titlebar-content {
+    -moz-border-top-colors: rgba(0, 0, 0, .1) rgba(255, 255, 255, .3)
+                            rgba(255, 255, 255, .2);
+  }
+
+  #messengerWindow[sizemode="normal"] > #titlebar >
+  #titlebar-content:-moz-window-inactive {
+    -moz-border-top-colors: rgba(255, 255, 255, .4) rgba(255, 255, 255, .3)
+                            rgba(255, 255, 255, .2);
+  }
+}
+
+#messengerWindow[tabsintitlebar][sizemode="maximized"] > #navigation-toolbox{
+  margin-top: -12px;
+}
+
+/* from mailWindow1-aero.css */
+@media (-moz-windows-default-theme) {
+  #messengerWindow[tabsintitlebar][sizemode="maximized"] > #navigation-toolbox{
+    margin-top: -6px;
+  }
+}
+
+@media (-moz-windows-compositor) {
+  #messengerWindow[sizemode="normal"] > #titlebar {
+    -moz-appearance: -moz-window-titlebar;
+  }
+
+  #messengerWindow[sizemode="maximized"] > #titlebar {
+    -moz-appearance: -moz-window-titlebar-maximized;
+  }
+
+  #messengerWindow[sizemode="normal"] > #titlebar > #titlebar-content {
+    border-top-width: 0;
+  }
+
+  #messengerWindow[sizemode="normal"] #titlebar-buttonbox {
+    margin-top: 0;
+  }
+
+  #messengerWindow[sizemode="normal"] > #titlebar > #titlebar-content:-moz-lwtheme {
+    margin-bottom: -2px;
+    border-top: 2px solid;
+    -moz-border-top-colors: rgb(37, 44, 51) rgba(255, 255, 255, .6);
+  }
+
+  .titlebar-button {
+    display: none;
+  }
+
+  #titlebar-buttonbox {
+    -moz-appearance: -moz-window-button-box;
+  }
+
+  #messengerWindow[sizemode="maximized"] #titlebar-buttonbox {
+    -moz-appearance: -moz-window-button-box-maximized;
+    -moz-margin-end: 3px;
+  }
+  
+  #messengerWindow:not(:-moz-lwtheme) {
+    -moz-appearance: -moz-win-borderless-glass;
+    background-color: transparent !important;
+  }
+}
+
+@media not all and (-moz-windows-compositor) {
+  @media (-moz-windows-default-theme) {
+    #messengerWindow:not(:-moz-lwtheme) {
+      background-color: rgb(185, 209, 234);
+    }
+    #messengerWindow:not(:-moz-lwtheme):-moz-window-inactive {
+      background-color: rgb(215, 228, 242);
+    }
+
+    #messengerWindow[sizemode="normal"] > #titlebar > #titlebar-content {
+      border-top-width: 2px;
+      -moz-border-top-colors: #4D4D4D #E9ECF3;
+    }
+
+    #messengerWindow[sizemode="normal"] #titlebar-buttonbox {
+      margin-top: -2px;
+    }
+  }
+}
+
+@media (-moz-windows-compositor) {
+  #messengerWindow[sizemode=normal] #tabpanelcontainer {
+    border: 1px solid rgba(10%, 10%, 10%, .4);
+    border-top: none;
+    background-clip: padding-box;
+  }
+
+  #messengerWindow #mail-toolbar-menubar2 {
+  -moz-appearance: none;
+  border-top: 1px solid rgba(10%, 10%, 10%, .4) !important;
+  border-bottom: none;
+  }
+  
+  #messengerWindow[sizemode=normal] #mail-toolbar-menubar2 {
+	-moz-appearance: none;
+	border: 1px solid rgba(10%, 10%, 10%, .4);
+	border-top: 1px solid rgba(10%, 10%, 10%, .4) !important;
+    border-bottom: none;
+    background-clip: padding-box;
+  }
+  
+  #messengerWindow[sizemode=normal] #tabs-toolbar {
+	border-left: 1px solid rgba(10%, 10%, 10%, .4);
+	border-right: 1px solid rgba(10%, 10%, 10%, .4);
+  }
+
+  #messengerWindow[sizemode=normal] statusbar {
+    -moz-appearance: none;
+    margin-top: -1px;
+    border: 1px solid rgba(10%, 10%, 10%, .4);
+    border-top-color: threedshadow;
+    border-radius: 1px 1px 0 0;
+    background-clip: padding-box;
+  }
+}
+
